<resources>
    <string name="app_name">Eventifi</string>
    <string name="log_in">Log in</string>
    <string name="welcome">WELCOME</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up_here"><u>Sign up here!</u></string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="splash_screen_title">EVENTIFI</string>
    <string name="splash_screen_subtitle">You Plan It</string>
    <string name="welcome_message">Welcome</string>
    <string name="sign_up_message">Sign up here</string>
    <string name="register_as">Register As:</string>
    <string name="register_eo">Register As Organizer</string>
    <string name="register_spp">Register As Provider</string>
    <string name="register_auth">Register As Auth user</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="enter_email_and_password">Please enter email and password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_ul"><u>Sign up here</u></string>
    <string name="quick_registration_missing_information">Missing required information. Redirecting to login</string>
    <string name="invalid_auth_token">Invalid auth token. Redirecting to login</string>
    <string name="token_is_valid">Token is valid</string>
    <string name="invalid_phone_format">Invalid phone format</string>
    <string name="passwords_do_not_match">Passwords do NOT match</string>
    <string name="password_min_length_error">Password must be minimum 8 characters long</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="organization_name_is_required">Organization name is required</string>
    <string name="organization_description_is_required">Organization description is required</string>
    <string name="first_name_is_required">First name is required</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="country_is_required">Country is required</string>
    <string name="city_is_required">City is required</string>
    <string name="street_is_required">Street is required</string>
    <string name="house_number_is_required">House number is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_confirmation_is_required">Password confirmation is required</string>
    <string name="phone_number_is_required">Phone number is required</string>
    <string name="registration_successful">Successful registration! Check your email for activation link</string>
    <string name="error_during_registration">Error during registration</string>
    <string name="top_events">TOP EVENTS TO ATTEND</string>
    <string name="all_events">ALL EVENTS YOU CAN ATTEND</string>
    <string name="top_services_products">TOP SERVICES &amp; PRODUCTS</string>
    <string name="all_services_products">ALL SERVICES &amp; PRODUCTS</string>
    <string name="more_info">More info</string>
    <string name="eo">Event Organizer</string>
    <string name="spp">Service and Product Provider</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house_number">House Number</string>
    <string name="select_first">Select role first</string>
    <string name="sign_in_ul"><u>Already have an account? Sign in!</u></string>
    <string name="tab_top_events">Top events</string>
    <string name="tab_all_events">All events</string>
    <string name="tab_top_services_products">Top items</string>
    <string name="tab_all_services_products">All items</string>
    <string name="toolbar_chats">Chats</string>
    <string name="toolbar_notifications">Notifications</string>
    <string name="toolbar_account">Account</string>
    <string name="search_bar">Search</string>
    <string name="filters">Filters</string>
    <string name="sort">Sort</string>
    <string name="reset_filters">Reset filters</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="sort_options">Sort by:</string>
    <string name="button_close">Close</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="event_name">Event name</string>
    <string name="event_date_range">Event date range</string>
    <string name="date_range">Date range</string>
    <string name="select_event_range_message">Select date range for the event</string>
    <string name="max_participants">Max participants</string>
    <string name="description">Description</string>
    <string name="event_type">Event type</string>
    <string name="event_location">Event location</string>
    <string name="n_event_search_results_found">%d event%s found</string>
    <string name="error_fetching_more_data">Error fetching more data</string>
    <string name="item_location">Item location</string>
    <string name="price">Price</string>
    <string name="item_category">Item category</string>
    <string name="product_availability">Availability</string>
    <string name="service_specifics">Specifics</string>
    <string name="minimum_duration">Min. duration (in minutes)</string>
    <string name="maximum_duration">Max. duration (in minutes)</string>
    <string name="cancellation_deadline">Cancellation deadline (in days)</string>
    <string name="reservation_deadline">Reservation deadline (in days)</string>
    <string name="n_item_search_results_found">%d %s found</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_as_guest_ul"><u>Continue as Guest</u></string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="name">Name</string>
    <string name="participants">Participants</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="your_profile">Your profile</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="you_eo">You are an Event Organizer</string>
    <string name="you_spp">You are a Service and Product Provider</string>
    <string name="example_email">example@gmail.com</string>
    <string name="change_pass">Change password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone Number</string>
    <string name="org_name">Organization Name</string>
    <string name="org_desc">Organization Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_login">Login failed. Please try again</string>
    <string name="photo_url">Photo URL</string>
    <string name="you_au">You are an Authenticated User</string>
    <string name="you_admin">You are an administrator</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="new_passwords_do_not_match">New passwords do not match!</string>
    <string name="cancel">Cancel</string>
    <string name="account_deactivation_message">You are about to deactivate your account. This action is <b>irreversible</b>! Are you sure you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">Profile</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="all_event_types">All Event Types</string>
    <string name="create_new_event_type">Create new Event Type</string>
    <string name="create_event_type">Create Event Type</string>
    <string name="event_type_name">Event type name</string>
    <string name="event_type_description">Event type description</string>
    <string name="search_for_categories">Search categories…</string>
    <string name="button">Button</string>
    <string name="reset_results">Reset results</string>
    <string name="search_results">Search results:</string>
    <string name="selected_categories">Selected categories:</string>
    <string name="update_event_type">Update Event Type</string>
    <string name="more">More…</string>
    <string name="delete_event_type">Delete Event Type</string>
    <string name="reactivate_event_type">Reactivate Event Type</string>
    <string name="reactivate_event_type_message">You are about to reactivate this event type. Are you sure?</string>
    <string name="admin_options">Admin Management</string>
    <string name="event_type_menu_item">Event Types</string>
    <string name="show">Show</string>
    <string name="auth_user">Authenticated user</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="no_events_to_show">No events to show.</string>
    <string name="no_items_to_show">No items to show.</string>
    <string name="unable_to_contact_server">Unable to contact the server. Try again later.</string>
    <string name="no_services_to_show">No services to show</string>
    <string name="d_services_found">%d services found</string>
    <string name="d_events_found">%d events found</string>
    <string name="event_types">Event Types</string>
    <string name="service_creation">SERVICE CREATION</string>
    <string name="service_update">SERVICE UPDATE</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="back">Back</string>
    <string name="error_accepting_invitation">Error accepting the invitation!</string>
    <string name="invitation_not_found">Invitation not found!</string>
    <string name="all_active_categories">All active categories</string>
    <string name="all_pending_categories">All pending categories</string>
    <string name="loading_data">Loading data…</string>
    <string name="category_menu_item">Categories</string>
    <string name="edit">Edit</string>
    <string name="you_must_choose_a_replacement_category">You must choose a replacement category!</string>
    <string name="replacement_category">Replacement category</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="submit">Submit</string>
    <string name="new_category_suggestion">New category suggestion</string>
    <string name="add_new_work_day">Add new work day</string>
    <string name="cant_find_a_suitable_category">Can\'t find a suitable category?</string>
    <string name="suggest_a_new_category">Suggest new</string>
    <string name="account_deactivation">Account deactivation</string>
    <string name="event_type_deactivation_message">You are about to deactivate this event type. Are you sure?</string>
    <string name="ignore">Ignore</string>
    <string name="suspend">Suspend User</string>
    <string name="delete_feedback">Delete Feedback</string>
    <string name="delete_feedback_and_suspend">Delete Feedback and Suspend User</string>
    <string name="report_actions">What will you do with this report?</string>
</resources>