<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.home.all.EventSortOptionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sort_options"
            android:textSize="24sp"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            />

        <include layout="@layout/space_divider"/>

        <RadioGroup
            android:id="@+id/event_sort_direction_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/sort_ascending_event"
            >

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/sort_ascending_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ascending"
                android:paddingHorizontal="4dp"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/sort_descending_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descending"
                android:paddingHorizontal="4dp"
                />

        </RadioGroup>

        <include layout="@layout/space_divider"/>

        <include android:id="@+id/event_sort_options_close_button" layout="@layout/view_close_button"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/event_sort_options_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:checkedButton="@id/sort_event_name"
        >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:checked="true"
            />

        <include layout="@layout/divider_thin"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_event_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants"
            />

        <include layout="@layout/divider_thin"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            />

        <include layout="@layout/divider_thin"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            />

        <include layout="@layout/divider_thin"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />

    </RadioGroup>

    <include layout="@layout/divider_thick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_sorting_events_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            />

    </LinearLayout>

</LinearLayout>