<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.admin.reports.ReportDecisionDialogFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_actions"
            android:textSize="20sp"
            android:paddingHorizontal="20dp"
            />

        <include layout="@layout/space_divider"/>

        <include android:id="@+id/report_decision_close_button" layout="@layout/view_close_button"/>

    </LinearLayout>

    <include layout="@layout/divider_thick"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioGroup
            android:id="@+id/report_decision_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/ignore_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ignore" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/suspend_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suspend" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/delete_feedback_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_feedback" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/delete_feedback_and_suspend_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_feedback_and_suspend" />

        </RadioGroup>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/divider_thick"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_decision_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="@string/submit"/>

</LinearLayout>